Refatoração para uso do Backbone.js

--- a/coi-management-model/pom.xml
+++ b/coi-management-model/pom.xml
@@ -127,5 +127,10 @@
 			<artifactId>jooq</artifactId>
 			<version>${jooq.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.jooq</groupId>
+			<artifactId>jooq-meta</artifactId>
+			<version>${jooq.version}</version>
+		</dependency>
 	</dependencies>
 </project>
