--- a/coi-management-web/pom.xml
+++ b/coi-management-web/pom.xml
@@ -172,5 +172,10 @@
 			<version>${hsqldb.version}</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>2.3</version>
+		</dependency>
 	</dependencies>
 </project>
