--- a/coi-management-web/src/main/webapp/WEB-INF/web.xml
+++ b/coi-management-web/src/main/webapp/WEB-INF/web.xml
@@ -24,4 +24,10 @@
 	<security-role>
 		<role-name>admin</role-name>
 	</security-role>
+
+	<resource-ref>
+		<res-ref-name>jdbc/dataSource</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
 </web-app>
