--- a/coi-management-web/pom.xml
+++ b/coi-management-web/pom.xml
@@ -213,5 +213,10 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>0.11.8</version>
+		</dependency>
 	</dependencies>
 </project>
