--- a/coi-management-web/pom.xml
+++ b/coi-management-web/pom.xml
@@ -229,6 +229,11 @@
 			<version>5.2.0</version>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.7</version>
+		</dependency>
+		<dependency>
 			<groupId>xml-apis</groupId>
 			<artifactId>xml-apis</artifactId>
 			<version>1.0.b2</version>
