--- a/coi-management-web/pom.xml
+++ b/coi-management-web/pom.xml
@@ -12,7 +12,7 @@
 	<properties>
 		<junit.version>3.8.1</junit.version>
 		<jersey.version>1.17.1</jersey.version>
-		<jooq.version>3.0.0-RC2</jooq.version>
+		<jooq.version>3.2.2</jooq.version>
 		<javax.servlet.version>3.0.1</javax.servlet.version>
 	</properties>
 	<build>
